tests/snapshots/snapshot_fixtures__fixtures_gcc_torture__loop_4b.snap
---
source: tests/snapshot_fixtures.rs
expression: snapshot
---
module "/home/takashi/Projects/clang-ir-rs/tests/fixtures.gcc-torture/loop-4b.c" (c, x86_64-unknown-linux-gnu)
fn f() -> s32i [external, c, no_inline, dso_local, nothrow] {
    %10 = alloca s32i, "__retval", align 4
    %11 = alloca s32i, "j", align 4
    %12 = alloca s64i, "i", align 8
    %13 = const 1 : s32i
    store %13, %11, align 4
    %14 = const 1610612736 : s64i
    store %14, %12, align 8
    scope {
        do {
            scope {
                %20 = const 1 : s32i
                %21 = load %11 : s32i, align 4
                %22 = shift left %21, %20 : s32i
                store %22, %11, align 4
                %23 = const 268435456 : s64i
                %24 = load %12 : s64i, align 8
                %25 = add %24, %23 : s64i [nsw]
                store %25, %12, align 8
                yield
            }
            yield
        } while {
            %17 = load %12 : s64i, align 8
            %18 = const -1610612736 : s64i
            %19 = cmp lt %17, %18 : bool
            condition %19
        }
        yield
    }
    %15 = load %11 : s32i, align 4
    store %15, %10
    %16 = load %10 : s32i
    return %16
}
fn abort() -> void [external, c, nothrow];
fn exit(%arg0: s32i) -> void [external, c];
fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
    %0 = alloca s32i, "__retval", align 4
    %1 = const 0 : s32i
    store %1, %0
    scope {
        %5 = get_global @f : (() -> s32i)*
        %6 = call @f() : s32i [all]
        %7 = const 2 : s32i
        %8 = cmp ne %6, %7 : bool
        if %8 {
            %9 = get_global @abort : (() -> void)*
            call @abort() [all]
            yield
        }
        yield
    }
    %2 = get_global @exit : ((s32i) -> void)*
    %3 = const 0 : s32i
    call @exit(%3) [all]
    %4 = load %0 : s32i
    return %4
}
