tests/snapshots/snapshot_fixtures__fixtures_gcc_torture__loop_5.snap
---
source: tests/snapshot_fixtures.rs
expression: snapshot
---
module "/home/takashi/Projects/clang-ir-rs/tests/fixtures.gcc-torture/loop-5.c" (c, x86_64-unknown-linux-gnu)
global __const.testit.ir : s32i[4] = [0, 1, 2, 3] [cir_private, default, dso_local, constant]
global a : s32i[4] = zero [internal, default, align 16, dso_local]
global t : s32i = 0 [internal, default, align 4, dso_local]

fn ap(%arg0: s32i) -> s32i [internal, c, no_inline, dso_local, nothrow] {
    ^bb0(%arg0: s32i):
        %61 = alloca s32i, "i", align 4
        %62 = alloca s32i, "__retval", align 4
        store %arg0, %61
        scope {
            %72 = get_global @t : s32i*
            %73 = load %72 : s32i, align 4
            %74 = const 3 : s32i
            %75 = cmp gt %73, %74 : bool
            if %75 {
                %76 = get_global @abort : (() -> void)*
                call @abort() [all]
                yield
            }
            yield
        }
        %63 = load %61 : s32i, align 4
        %64 = get_global @t : s32i*
        %65 = load %64 : s32i, align 4
        %66 = inc %65 : s32i [nsw]
        store %66, %64, align 4
        %67 = cast(integral) %65 : s64i
        %68 = get_global @a : s32i[4]*
        %69 = get_element %68[%67] : s32i*
        store %63, %69, align 4
        %70 = const 1 : s32i
        store %70, %62
        %71 = load %62 : s32i
        return %71
}
fn testit() -> void [internal, c, no_inline, dso_local, nothrow] {
    %33 = alloca s32i[4], "ir", align 16
    %34 = alloca s32i, "ix", align 4
    %35 = alloca s32i, "n", align 4
    %36 = alloca s32i, "m", align 4
    %37 = get_global @__const.testit.ir : s32i[4]*
    copy %33, %37
    %38 = const 1 : s32i
    store %38, %35, align 4
    %39 = const 3 : s32i
    store %39, %36, align 4
    scope {
        %40 = const 1 : s32i
        store %40, %34, align 4
        for cond: {
            %58 = load %34 : s32i, align 4
            %59 = const 4 : s32i
            %60 = cmp le %58, %59 : bool
            condition %60
        } step: {
            %41 = load %34 : s32i, align 4
            %42 = inc %41 : s32i [nsw]
            store %42, %34, align 4
            yield
        } do {
            scope {
                scope {
                    %51 = load %35 : s32i, align 4
                    %52 = const 1 : s32i
                    %53 = cmp eq %51, %52 : bool
                    if %53 {
                        %57 = const 4 : s32i
                        store %57, %36, align 4
                        yield
                    } else {
                        %54 = load %35 : s32i, align 4
                        %55 = const 1 : s32i
                        %56 = sub %54, %55 : s32i [nsw]
                        store %56, %36, align 4
                        yield
                    }
                    yield
                }
                %43 = load %35 : s32i, align 4
                %44 = const 1 : s32i
                %45 = sub %43, %44 : s32i [nsw]
                %46 = cast(integral) %45 : s64i
                %47 = get_element %33[%46] : s32i*
                %48 = load %47 : s32i, align 4
                %49 = call @ap(%48) : s32i [all]
                %50 = load %36 : s32i, align 4
                store %50, %35, align 4
                yield
            }
            yield
        }
        yield
    }
    return
}
fn abort() -> void [external, c, nothrow];
fn exit(%arg0: s32i) -> void [external, c];
fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
    %0 = alloca s32i, "__retval", align 4
    %1 = const 0 : s32i
    store %1, %0
    call @testit() [all]
    scope {
        %26 = const 0 : s64i
        %27 = get_global @a : s32i[4]*
        %28 = get_element %27[%26] : s32i*
        %29 = load %28 : s32i, align 16
        %30 = const 0 : s32i
        %31 = cmp ne %29, %30 : bool
        if %31 {
            %32 = get_global @abort : (() -> void)*
            call @abort() [all]
            yield
        }
        yield
    }
    scope {
        %19 = const 1 : s64i
        %20 = get_global @a : s32i[4]*
        %21 = get_element %20[%19] : s32i*
        %22 = load %21 : s32i, align 4
        %23 = const 3 : s32i
        %24 = cmp ne %22, %23 : bool
        if %24 {
            %25 = get_global @abort : (() -> void)*
            call @abort() [all]
            yield
        }
        yield
    }
    scope {
        %12 = const 2 : s64i
        %13 = get_global @a : s32i[4]*
        %14 = get_element %13[%12] : s32i*
        %15 = load %14 : s32i, align 8
        %16 = const 2 : s32i
        %17 = cmp ne %15, %16 : bool
        if %17 {
            %18 = get_global @abort : (() -> void)*
            call @abort() [all]
            yield
        }
        yield
    }
    scope {
        %5 = const 3 : s64i
        %6 = get_global @a : s32i[4]*
        %7 = get_element %6[%5] : s32i*
        %8 = load %7 : s32i, align 4
        %9 = const 1 : s32i
        %10 = cmp ne %8, %9 : bool
        if %10 {
            %11 = get_global @abort : (() -> void)*
            call @abort() [all]
            yield
        }
        yield
    }
    %2 = get_global @exit : ((s32i) -> void)*
    %3 = const 0 : s32i
    call @exit(%3) [all]
    %4 = load %0 : s32i
    return %4
}
