tests/snapshots/snapshot_fixtures__fixtures_gcc_torture__loop_6.snap
---
source: tests/snapshot_fixtures.rs
expression: snapshot
---
module "/home/takashi/Projects/clang-ir-rs/tests/fixtures.gcc-torture/loop-6.c" (c, x86_64-unknown-linux-gnu)
fn abort() -> void [external, c, nothrow];
fn exit(%arg0: s32i) -> void [external, c];
fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
    %0 = alloca s32i, "__retval", align 4
    %1 = alloca s8i, "c", align 1
    %2 = alloca s8i, "d", align 1
    %3 = alloca s32i, "nbits", align 4
    %4 = const 0 : s32i
    store %4, %0
    %5 = const -1 : s8i
    store %5, %1, align 1
    scope {
        %13 = const 1 : s32i
        store %13, %3, align 4
        for cond: {
            %27 = load %3 : s32i, align 4
            %28 = const 100 : s32i
            %29 = cmp lt %27, %28 : bool
            condition %29
        } step: {
            %14 = load %3 : s32i, align 4
            %15 = inc %14 : s32i [nsw]
            store %15, %3, align 4
            yield
        } do {
            scope {
                %16 = const 1 : s32i
                %17 = load %3 : s32i, align 4
                %18 = shift left %16, %17 : s32i
                %19 = const 1 : s32i
                %20 = sub %18, %19 : s32i [nsw]
                %21 = cast(integral) %20 : s8i
                store %21, %2, align 1
                scope {
                    %22 = load %2 : s8i, align 1
                    %23 = cast(integral) %22 : s32i
                    %24 = load %1 : s8i, align 1
                    %25 = cast(integral) %24 : s32i
                    %26 = cmp eq %23, %25 : bool
                    if %26 {
                        break
                    }
                    yield
                }
                yield
            }
            yield
        }
        yield
    }
    scope {
        %9 = load %3 : s32i, align 4
        %10 = const 100 : s32i
        %11 = cmp eq %9, %10 : bool
        if %11 {
            %12 = get_global @abort : (() -> void)*
            call @abort() [all]
            yield
        }
        yield
    }
    %6 = get_global @exit : ((s32i) -> void)*
    %7 = const 0 : s32i
    call @exit(%7) [all]
    %8 = load %0 : s32i
    return %8
}
