tests/snapshots/snapshot_fixtures__fixtures_gcc_torture__loop_8.snap
---
source: tests/snapshot_fixtures.rs
expression: snapshot
---
module "/home/takashi/Projects/clang-ir-rs/tests/fixtures.gcc-torture/loop-8.c" (c, x86_64-unknown-linux-gnu)
global a : double[3] = [0.000000e+00, 1.000000e+00, 2.000000e+00] [external, default, align 16, dso_local]

fn abort() -> void [external, c, nothrow];
fn bar(%arg0: s32i, %arg1: double*) -> void [external, c, no_inline, dso_local, nothrow] {
    ^bb0(%arg0: s32i, %arg1: double*):
        %25 = alloca s32i, "x", align 4
        %26 = alloca double*, "y", align 8
        store %arg0, %25
        store %arg1, %26
        scope {
            %27 = load %25 : s32i, align 4
            %28 = cast(int_to_bool) %27 : bool
            %29 = ternary %28 ? { : bool
                %35 = const #true : bool
                yield %35
            } : {
                %31 = load %26 : double*, align 8
                %32 = load %31 : double, align 8
                %33 = const 1.000000e+00 : double
                %34 = cmp ne %32, %33 : bool
                yield %34
            }
            if %29 {
                %30 = get_global @abort : (() -> void)*
                call @abort() [all]
                yield
            }
            yield
        }
        return
}
fn exit(%arg0: s32i) -> void [external, c];
fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
    %0 = alloca s32i, "__retval", align 4
    %1 = alloca double, "c", align 8
    %2 = alloca s32i, "d", align 4
    %3 = const 0 : s32i
    store %3, %0
    scope {
        %11 = const 0 : s32i
        store %11, %2, align 4
        for cond: {
            %22 = load %2 : s32i, align 4
            %23 = const 3 : s32i
            %24 = cmp lt %22, %23 : bool
            condition %24
        } step: {
            %12 = load %2 : s32i, align 4
            %13 = inc %12 : s32i [nsw]
            store %13, %2, align 4
            yield
        } do {
            scope {
                %14 = load %2 : s32i, align 4
                %15 = cast(integral) %14 : s64i
                %16 = get_global @a : double[3]*
                %17 = get_element %16[%15] : double*
                %18 = load %17 : double, align 8
                store %18, %1, align 8
                scope {
                    %19 = load %1 : double, align 8
                    %20 = const 0.000000e+00 : double
                    %21 = cmp gt %19, %20 : bool
                    if %21 {
                        goto e
                    }
                    yield
                }
                yield
            }
            yield
        }
        yield
    }
    %4 = const 1 : s32i
    call @bar(%4, %1) [all]
    %5 = get_global @exit : ((s32i) -> void)*
    %6 = const 1 : s32i
    call @exit(%6) [all]
    br ^bb1
    ^bb1():
        label e:
        %7 = const 0 : s32i
        call @bar(%7, %1) [all]
        %8 = get_global @exit : ((s32i) -> void)*
        %9 = const 0 : s32i
        call @exit(%9) [all]
        %10 = load %0 : s32i
        return %10
}
